--- a/css/theses.main.css
+++ b/css/theses.main.css
@@ -1734,18 +1734,12 @@ border-radius: 6px;
 	-moz-box-shadow:inset 0 1px 1px 0 rgba(0,0,0,.12);
 	box-shadow:inset 0 1px 1px 0 rgba(0,0,0,.12)
 }
-#login-activity {
-	margin-top: 35px;
-	position: absolute;
-	display: none;
+#login-submit-button.disabled {
+	box-shadow: none;
+	background: #87a2bc;
+	cursor: default;
 }
-#login-alert {
-	position: absolute;
-	width: 430px;
-	top: 8px;
-	left: 0px;
-	display: none;
-}
+
 
 #app-alerts section {
 	padding: 10px 15px;
