登陆界面“下次自动登陆”选项默认勾选

--- a/js/template/login.hbs
+++ b/js/template/login.hbs
@@ -17,7 +17,7 @@
 			</button>
 			<div class="login-options-container">
 				<label class="checkbox">
-					<input id="login-remember-me" type="checkbox"> 下次自动登陆
+					<input id="login-remember-me" type="checkbox" checked> 下次自动登陆
 				</label>
 				<a id="login-forget-button" href="mailto:theses.nfsysu@gmail.com">忘记密码?</a>
 			</div>
