修改文件下载逻辑

--- a/js/template/m/titles_show.hbs
+++ b/js/template/m/titles_show.hbs
@@ -135,6 +135,10 @@
 					{{view Theses.LoadingView}}
 				{{else}}
 					{{#if documents.length}}
+						<form id="document-download-form" method="post" target="_blank" rel="external">
+							<input type="hidden" name="Auth">
+							<input type="hidden" name="docid">
+						</form>
 						{{#each documents}}
 							{{view Theses.DocumentCell doc=this}}
 						{{/each}}
