流程时间中只高亮当前项目

--- a/js/template/m/dashboard.hbs
+++ b/js/template/m/dashboard.hbs
@@ -78,7 +78,7 @@
 					</tr>
 					{{#each milestones}}
 						{{#if canView}}
-						<tr {{bindAttr class="isCurrent:success isNext:error"}}>
+						<tr {{bindAttr class="isCurrent:success"}}>
 							<td>{{desc}}</td>
 							<td>
 								{{#if canOperate}}
