--- a/js/template/document.hbs
+++ b/js/template/document.hbs
@@ -11,7 +11,7 @@
     		<div class="document-page">
     			<header>
     				<button class="btn pull-left" {{action cancelComposing}}>取消</button>
-    				<button class="btn pull-left">下载模板</button>
+    				<button class="btn pull-left" {{action downloadTemplate}}>下载模板</button>
     				<h4>报告</h4>
     				<button class="btn btn-primary pull-right" {{action post}}>确认并上传</button>
     			</header>
